[package]
name = "hf-mdrd"
description = "A markdown renderer written in rust, compiled to wasm."
repository = "https://github.com/revival0728/HF-MdRd"
license = "MIT"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = "0.13.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
strip = true
opt-level = "s"
lto = true
